devops: #no-issue add basic routes to ver-1 with shared packages

--- a/packages/ver-1/tsconfig.app.json
+++ b/packages/ver-1/tsconfig.app.json
@@ -20,7 +20,14 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Paths */
+    "paths": {
+      "@components/*": ["../shared/src/components/*"],
+      "@constants/*": ["../shared/src/constants/*"],
+      "@design-system": ["../shared/src/design-system/index.ts"]
+    }
   },
   "include": ["src"]
 }
