--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^7.1.1",
     "react-svg": "^16.2.0",
     "react-textarea-autosize": "^8.5.6",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "styled-reset": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
