devops: #no-issue remaing prettier apply

--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   },
   "lint-staged": {
     "**/*.{ts,js,tsx,jsx}": [
-      "pnpm lint:diff",
-      "prettier --write"
+      "pnpm lint:diff"
     ],
     "src/**/*.html": [
       "prettier --write"
